# Polymarket-bot

./: .env.example  .gitignore  Cargo.toml  README.md  implementation.md  logic.md
.jules/: bolt.md
benches/: benchmark.rs
src/: arbitrage_engine.rs  blockchain.rs  clob_client.rs  execution_analyzer.rs  lib.rs  main.rs  market_fetcher.rs  normalization.rs  shared_types.rs  topic_classifier.rs
