[package]
name = "polymarket_bot"
version = "0.1.0"
edition = "2021"

[dependencies]
rust_decimal = "1.30.0"
rust_decimal_macros = "1.30.0"
regex = "1.7.1"
strsim = "0.10.0"
chrono = { version = "0.4", features = ["std", "serde"] }
lazy_static = "1.4.0"
url = "2.3.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.25.0", features = ["full"] }
async-trait = "0.1.64"
reqwest = { version = "0.11", features = ["json", "blocking"] }
ethers = { version = "2.0", features = ["ws", "rustls"] }
futures = "0.3"
dotenv = "0.15.0"
tokio-tungstenite = { version = "0.20", features = ["rustls-tls-native-roots"] }

[dev-dependencies]
rstest = "0.16.0"
anyhow = "1.0"